intTests/test_parse_errors/parser010.log.good
Loading file "parser010.saw"
parser010.saw:7:1-7:20: Error: Syntax error: missing ';'
FAILED
