intTests/test_parse_errors/parser010.saw
// a less trivial example with a missing semicolon
//
// this also seems to think only semicolon is legal at the end
// of the first line, which isn't true.

import "foo.cry"
enable_experimental;
